fix: testimonials avatar spacing

--- a/src/styles/blocks/_testimonials.scss
+++ b/src/styles/blocks/_testimonials.scss
@@ -79,6 +79,7 @@
 
   @include bp-up(lg) {
     @include heading-4;
+    margin-left: 16px;
   }
 }
 
